# bescor_mp101_controller

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.txt
cmake/: Conan.cmake
code/: install.sh
code/arduino/include/: main.h  node.h  packet.h
code/arduino/lib/RF24/: .library.json
code/arduino/mp101_controller/: main.h  mp101_controller.ino
code/arduino/mp101_controller/node/: node.cpp  node.h
code/arduino/src/: main.cpp  node.cpp  packet.cpp
code/pi/: CMakeLists.txt  config.yaml  controller_map.h  js.cpp  js.h  load_config.c  load_config.h  main.cpp  main.h  pi_compile.sh  toolchain-rpi.cmake
code/pi/joystick/: js.cpp  js.h
code/shared/node/: node.c  node.cpp  node.h
code/shared/packet/: packet.c  packet.cpp  packet.h
code/tests/joystick/: .gitignore  CMakeLists.txt  compile.sh  controller_mapping  js.cpp  js.h  main.cpp
code/tests/node_test/: CMakeLists.txt  Makefile  node_test.c  node_test.cpp  pi_compile.sh  toolchain-rpi.cmake
code/tests/non_pi_test/: .gitignore  CMakeLists.txt  README.md  config.yaml  main.cpp  main.h  ps4_test
code/tests/packet_test/: Makefile  packet_test.c
hardware/board/: board.brd  board.sch  board_top_bom.csv  board_top_cpl.csv  bottom.txt  dxfimp.scr
hardware/board/CAMOutputs/Assembly/: PnP_board_front.csv  board.csv  board.txt
hardware/board/CAMOutputs/GerberFiles/: copper_bottom.gbr  copper_top.gbr  gerber_job.gbrjob  profile.gbr  silkscreen_bottom.gbr  silkscreen_top.gbr  soldermask_bottom.gbr  soldermask_top.gbr  solderpaste_top.gbr
hardware/board/board/: board.brd  board.sch  bom.csv  eagle.epf
pcb/cam/cam/: cam.sch
src/: CMakeLists.txt
src/arduino/mp101_controller/: main.h  mp101_controller.ino  mp101_controller.ino.standard.hex  mp101_controller.ino.with_bootloader.standard.hex
src/libraries/: CMakeLists.txt
src/libraries/joystick/: CMakeLists.txt  controller_map.h  js.cpp  js.h
src/libraries/node/: CMakeLists.txt  node.cpp  node.h
src/libraries/packet/: CMakeLists.txt  packet.cpp  packet.h
src/pi/: CMakeLists.txt  main.cpp  main.h  pi_compile.sh
tests/: CMakeLists.txt
tests/joystick/: CMakeLists.txt  joystick_test.cpp
tests/node_test/: CMakeLists.txt  node_test.cpp
tests/packet_test/: CMakeLists.txt  packet_test.cpp
